schema/testdata/validation_expression_mixed_rhs_array/schema.keel
model Post {
  @permission(
    expression: "bob" in [1, "123"],
    actions: [get]
  )
}
