schema/testdata/errors/expression_mixed_rhs_array.keel
model Post {
    @permission(
        //expect-error:34:39:E032:Cannot have mixed types in an array literal
        expression: "bob" in [1, "123"],
        actions: [get]
    )
}
